fixed footer on smaller devices

--- a/dark-mode.css
+++ b/dark-mode.css
@@ -89,6 +89,14 @@ section {
 /* Extra small devices (phones, 600px and down) */
 @media only screen and (max-width: 400px) {
     /* footer styling */
+    #project-footer {
+        text-align: center;
+        background-image: linear-gradient(to bottom right, #222222, #333333);
+        border-top: thin solid #145DA0;
+        bottom: 0;
+        width: 100%;
+    }
+
     #footer {
         text-align: center;
         background-image: linear-gradient(to bottom right, #222222, #333333);
@@ -101,6 +109,14 @@ section {
 /* Small devices (portrait tablets and large phones, 600px and up) */
 @media only screen and (min-width: 401px) {
     /* footer styling */
+    #project-footer {
+        text-align: center;
+        background-image: linear-gradient(to bottom right, #222222, #333333);
+        border-top: thin solid #145DA0;
+        bottom: 0;
+        width: 100%;
+    }
+
     #footer {
         text-align: center;
         background-image: linear-gradient(to bottom right, #222222, #333333);
@@ -113,6 +129,14 @@ section {
 /* Medium devices (landscape tablets, 768px and up) */
 @media only screen and (min-width: 768px) {
     /* footer styling */
+    #project-footer {
+        text-align: center;
+        background-image: linear-gradient(to bottom right, #222222, #333333);
+        border-top: thin solid #145DA0;
+        bottom: 0;
+        width: 100%;
+    }
+
     #footer {
         text-align: center;
         background-image: linear-gradient(to bottom right, #222222, #333333);
@@ -125,6 +149,14 @@ section {
 /* Large devices (laptops/desktops, 992px and up) */
 @media only screen and (min-width: 992px) {
     /* footer styling */
+    #project-footer {
+        text-align: center;
+        background-image: linear-gradient(to bottom right, #222222, #333333);
+        border-top: thin solid #145DA0;
+        bottom: 0;
+        width: 100%;
+    }
+
     #footer {
         text-align: center;
         background-image: linear-gradient(to bottom right, #222222, #333333);
