--- a/style.css
+++ b/style.css
@@ -97,6 +97,14 @@ section {
 /* Extra small devices (phones, 600px and down) */
 @media only screen and (max-width: 400px) {
     /* footer styling */
+    #project-footer {
+        text-align: center;
+        background-image: linear-gradient(to bottom right, #f5f5f5, #f9f9f9);
+        border-top: thin solid #145DA0;
+        bottom: 0 !important;
+        width: 100%;
+    }
+
     #footer {
         text-align: center;
         background-image: linear-gradient(to bottom right, #f5f5f5, #f9f9f9);
@@ -109,6 +117,14 @@ section {
 /* Small devices (portrait tablets and large phones, 600px and up) */
 @media only screen and (min-width: 401px) {
     /* footer styling */
+    #project-footer {
+        text-align: center;
+        background-image: linear-gradient(to bottom right, #f5f5f5, #f9f9f9);
+        border-top: thin solid #145DA0;
+        bottom: 0 !important;
+        width: 100%;
+    }
+
     #footer {
         text-align: center;
         background-image: linear-gradient(to bottom right, #f5f5f5, #f9f9f9);
@@ -121,6 +137,14 @@ section {
 /* Medium devices (landscape tablets, 768px and up) */
 @media only screen and (min-width: 768px) {
     /* footer styling */
+    #project-footer {
+        text-align: center;
+        background-image: linear-gradient(to bottom right, #f5f5f5, #f9f9f9);
+        border-top: thin solid #145DA0;
+        bottom: 0 !important;
+        width: 100%;
+    }
+
     #footer {
         text-align: center;
         background-image: linear-gradient(to bottom right, #f5f5f5, #f9f9f9);
@@ -133,6 +157,14 @@ section {
 /* Large devices (laptops/desktops, 992px and up) */
 @media only screen and (min-width: 992px) {
     /* footer styling */
+    #project-footer {
+        text-align: center;
+        background-image: linear-gradient(to bottom right, #f5f5f5, #f9f9f9);
+        border-top: thin solid #145DA0;
+        bottom: 0 !important;
+        width: 100%;
+    }
+    
     #footer {
         text-align: center;
         background-image: linear-gradient(to bottom right, #f5f5f5, #f9f9f9);
